--- a/index.html
+++ b/index.html
@@ -25,34 +25,41 @@
 </head>
 <body>
     <header class="header">
-        <nav class="menu">
-            <a href=""><img src="" alt=""></a>
-            <ul>
-                <li class="menu-item"><a href="">Home</a></li>
-                <li class="menu-item"><a href="">Features</a></li>
-                <li class="menu-item"><a href="">Video</a></li>
-                <li class="menu-item"><a href="">Screens</a></li>
-                <li class="menu-item"><a href="">Pricing</a></li>
-                <li class="menu-item"><a href="">Team</a></li>
-                <li class="menu-item"><a href="">Free Trail</a></li>
-            </ul>
-        </nav>
         <div class="wrap">
-            <div class="header-title">
-                <h1>Best Software Landingpage</h1>
-                <a href="" class="btn-primary">Get started now</a>
-                <a href="" class="btn-secondary">Learn more</a>
+            <nav class="menu">
+                <a href=""><img src="img/logo.png" alt=""></a>
+                <ul>
+                    <li class="menu-item"><a href="">Home</a></li>
+                    <li class="menu-item"><a href="">Features</a></li>
+                    <li class="menu-item"><a href="">Video</a></li>
+                    <li class="menu-item"><a href="">Screens</a></li>
+                    <li class="menu-item"><a href="">Pricing</a></li>
+                    <li class="menu-item"><a href="">Team</a></li>
+                    <li><a href="" class="btn-primary btn-free">Free Trail</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="header-title">
+            <div class="header-box">
+                <div class="wrap">
+                    <h1>Best Software Landingpage</h1>
+                    <div class="btn-group">
+                        <a href="" class="btn-primary">Get started now</a>
+                        <a href="" class="btn-secondary">Learn more</a>
+                    </div>
+                </div>
+                <img src="img/screen_1.png" alt="Screen 1" class="dashbord">
             </div>
-            <img src="" alt="">
+            
         </div>
     </header>
 
     <div class="page-company">
-        <ul>
-            <li class="company-item"><a href=""></a></li>
-            <li class="company-item"><a href=""></a></li>
-            <li class="company-item"><a href=""></a></li>
-            <li class="company-item"><a href=""></a></li>
+        <ul class="company-box">
+            <li class="company-item"><a href=""><img src="img/company_1.png" alt="Company 1"></a></li>
+            <li class="company-item"><a href=""><img src="img/company_2.png" alt="Company 2"></a></li>
+            <li class="company-item"><a href=""><img src="img/company_3.png" alt="Company 3"></a></li>
+            <li class="company-item"><a href=""><img src="img/company_4.png" alt="Company 4"></a></li>
         </ul>
     </div>
 
@@ -125,11 +132,11 @@
     <div class="page-facts">
         <div class="wrap">
             <h2><span>Fun Facts</span>Some Fun Facts About Dashboard</h2>
-            <ul>
-                <li><span>53K</span>Layouts</li>
-                <li><span>10K</span>Projects</li>
-                <li><span>12K</span>Cup coffee</li>
-                <li><span>120</span>Awards</li>
+            <ul class="facts-box">
+                <li class="facts-item"><span>53K</span>Layouts</li>
+                <li class="facts-item"><span>10K</span>Projects</li>
+                <li class="facts-item"><span>12K</span>Cup coffee</li>
+                <li class="facts-item"><span>120</span>Awards</li>
             </ul>
         </div>
     </div>
@@ -283,15 +290,17 @@
     </div>
 
     <footer class="footer">
-        <div>
-            <p>Made With Love & Copyright By - <a href="">limpon</a></p>
-            <ul class="social">
-                <li><a href="" target="_blank"></a></li>
-                <li><a href="" target="_blank"></a></li>
-                <li><a href="" target="_blank"></a></li>
-                <li><a href="" target="_blank"></a></li>
-                <li><a href="" target="_blank"></a></li>
-            </ul>
+        <div class="wrap">
+            <div class="box-footer">
+                <p class="copyright">Made With Love & Copyright By - <a href="" class="copyright-link">limpon</a></p>
+                <ul class="social">
+                    <li class="footer-item"><a href="" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
+                    <li class="footer-item"><a href="" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li class="footer-item"><a href="" target="_blank"><i class="fa-brands fa-behance"></i></a></li>
+                    <li class="footer-item"><a href="" target="_blank"><i class="fa-brands fa-pinterest"></i></a></li>
+                    <li class="footer-item"><a href="" target="_blank"><i class="fa-brands fa-foursquare"></i></a></li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
