--- a/index.html
+++ b/index.html
@@ -67,62 +67,62 @@
             <div class="grid">
                 <h2 class="grid-title"><span>Features</span>Best Features Ever Seen</h2>
                 <div class="grid-item grid-item-1">
-                    <img src="img/grid_icon_1.png" alt="grid_icon_1">
+                    <img src="img/grid_icon_1.png" alt="grid_icon_1" class="grid_icon">
                     <h3>Well Documented</h3>
                     <p>Lorem ipsum dolor sit amet conse<br>ctetur adipisicing elit, sed don eiusmod tempor incididunt</p>
                     <a href="">Read More</a>
                 </div>
                 <div class="grid-item grid-item-2">
-                    <img src="img/grid_icon_2.png" alt="grid_icon_2">
+                    <img src="img/grid_icon_2.png" alt="grid_icon_2" class="grid_icon">
                     <h3>Highly Customizeable</h3>
                     <p>Lorem ipsum dolor sit amet conse<br>ctetur adipisicing elit, sed don eiusmod tempor incididunt</p>
                     <a href="">Read More</a>
                 </div>
                 <div class="grid-item grid-item-3">
-                    <img src="img/grid_icon_3.png" alt="grid_icon_3">
+                    <img src="img/grid_icon_3.png" alt="grid_icon_3" class="grid_icon">
                     <h3>Mobile Friendly Design</h3>
                     <p>Lorem ipsum dolor sit amet conse<br>ctetur adipisicing elit, sed don eiusmod tempor incididunt</p>
                     <a href="">Read More</a>
                 </div>
                 <div class="grid-item grid-item-4">
-                    <img src="img/grid_icon_4.png" alt="grid_icon_4">
+                    <img src="img/grid_icon_4.png" alt="grid_icon_4" class="grid_icon">
                     <h3>Responsive Design</h3>
                     <p>Lorem ipsum dolor sit amet conse<br>ctetur adipisicing elit, sed don eiusmod tempor incididunt</p>
                     <a href="">Read More</a>
                 </div>
                 <div class="grid-item grid-item-5">
-                    <img src="img/grid_icon_5.png" alt="grid_icon_5">
+                    <img src="img/grid_icon_5.png" alt="grid_icon_5" class="grid_icon">
                     <h3>24/7 Online Support</h3>
                     <p>Lorem ipsum dolor sit amet conse<br>ctetur adipisicing elit, sed don eiusmod tempor incididunt</p>
                     <a href="">Read More</a>
                 </div>
                 <div class="grid-item grid-item-6">
-                    <img src="img/grid_icon_6.png" alt="grid_icon_6">
+                    <img src="img/grid_icon_6.png" alt="grid_icon_6" class="grid_icon">
                     <h3>Easy To Edit</h3>
                     <p>Lorem ipsum dolor sit amet conse<br>ctetur adipisicing elit, sed don eiusmod tempor incididunt</p>
                     <a href="">Read More</a>
                 </div>
                 <div class="grid-text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                    <p><span>Rosalina Pong</span> - Founder, uithemes</p>
+                    <p class="aside">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p class="grid-author"><span>Rosalina Pong</span> - Founder, uithemes</p>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="block-subscribe">
-        <div>
+        <div class="wrap subscribe-flex">
             <div>
                 <div>
-                    <h2><span>Subscribe</span>Signup For A Trail</h2>
-                    <p>Create your free account now & get 30 days free trail No credit card required</p>
+                    <h2 class="subscribe-title"><span>Subscribe</span>Signup For A Trail</h2>
+                    <p class="subscribe-intro">Create your free account now & get 30 days free trail No credit card required</p>
                 </div>
-                <div>
-                    <input type="email" placeholder="Enter your email address">
-                    <button>Subscribe</button>
+                <div class="input-subscribe">
+                    <input type="email" placeholder="Enter your email address" class="email-input">
+                    <button class="subscribe-btn">Subscribe</button>
                 </div>
             </div>
-            <img src="" alt="">
+            <img src="img/robot.png" alt="robot" class="robot-img">
         </div>
     </div>
 
