--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
     </div>
 
     <div class="block-facts">
-        <div>
-            <h2><span>Fun Facts</span>Some Fun Facts About Dashboard</h2>
+        <div class="wrap">
+            <h2 class="facts-title"><span>Fun Facts</span>Some Fun Facts About Dashboard</h2>
             <div>
-                <ul>
-                    <li><span>53k</span>Layouts</li>
-                    <li><span>10k</span>Projects</li>
-                    <li><span>12k</span>Cup coffee</li>
-                    <li><span>120</span>Awards</li>
+                <ul class="box-facts">
+                    <li class="facts-item"><span>53k</span>Layouts</li>
+                    <li class="facts-item"><span>10k</span>Projects</li>
+                    <li class="facts-item"><span>12k</span>Cup coffee</li>
+                    <li class="facts-item"><span>120</span>Awards</li>
                 </ul>
             </div>
         </div>
@@ -193,9 +193,9 @@
     </div>
 
     <div class="block-preview">
-        <div>
-            <h2><span>Screen preview</span>Screenshot With Details</h2>
-            <img src="" alt="">
+        <div class="wrap">
+            <h2 class="preview-title"><span>Screen preview</span>Screenshot With Details</h2>
+            <img src="/img/screen_2.png" alt="Screen_2" class="preview-img">
         </div>
     </div>
 
@@ -277,38 +277,40 @@
     </div>
 
     <div class="block-team">
-        <div>
-            <h2><span>Angels</span>Our Team</h2>
-            <div>
-                <div>
-                    <img src="" alt="">
-                    <p>Founder</p>
-                    <p>Ricardo T. Obrien</p>
-                    <div>
-                        <a href="">+</a>
+        <div class="wrap">
+            <h2 class="team-title"><span>Angels</span>Our Team</h2>
+            <div class="team-box">
+                <div class="team-card-bg">
+                    <div class="team-card">
+                        <img src="img/Team_avatar_1.jpg" alt="Ricardo T" class="team-userLogo">
+                        <p class="team-post">Founder</p>
+                        <p class="team-userName">Ricardo T. Obrien</p>
+                        <div class="team-menu">
+                            <button class="team-item">+</button>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div>
-                <div>
-                    <img src="" alt="">
-                    <p>Ceo</p>
-                    <p>Alberto Del Rio</p>
-                    <div>
-                        <a href="">1</a>
-                        <a href="">2</a>
-                        <a href="">3</a>
-                        <a href="">4</a>
+                <div class="team-card-bg">
+                    <div class="team-card">
+                        <img src="img/Team_avatar_2.jpg" alt="Alberto" class="team-userLogo">
+                        <p class="team-post">Ceo</p>
+                        <p class="team-userName">Alberto Del Rio</p>
+                        <div class="team-menu">
+                            <button class="team-item team-item-active team-item-open"><i class="fa-brands fa-facebook-f"></i></button>
+                            <button class="team-item team-item-open"><i class="fa-brands fa-twitter"></i></button>
+                            <button class="team-item team-item-open"><i class="fa-brands fa-behance"></i></button>
+                            <button class="team-item team-item-open"><i class="fa-brands fa-chrome"></i></button>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div>
-                <div>
-                    <img src="" alt="">
-                    <p>Designer</p>
-                    <p>Thomas Alva Adison</p>
-                    <div>
-                        <a href="">+</a>
+                <div class="team-card-bg">
+                    <div class="team-card">
+                        <img src="img/Team_avatar_3.jpg" alt="Thomas" class="team-userLogo">
+                        <p class="team-post">Designer</p>
+                        <p class="team-userName">Thomas Alva Adison</p>
+                        <div class="team-menu">
+                            <button class="team-item">+</button>
+                        </div>
                     </div>
                 </div>
             </div>
