--- a/index.html
+++ b/index.html
@@ -158,17 +158,22 @@
     </div>
 
     <div class="block-app">
-        <div>
-            <div>
-                <h2>Meet With Future Landingpage</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-                <p>Available now</p>
+        <div class="wrap">
+            <div class="app-box">
+                <div class="app-info">
+                    <h2 class="app-title"><span>Meet With</span> Future Landingpage</h2>
+                    <p class="app-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+                    <p class="app-subTitle">Available now</p>
+                    <div>
+                        <a href="" class="google-play"><img src="/img/GooglePlay.png" alt="GooglePlay"></a>
+                        <a href="" class="app-store"><img src="/img/AppStore.png" alt="AppStore"></a>
+                    </div>
+                </div>
                 <div>
-                    <a href=""><img src="" alt=""></a>
-                    <a href=""><img src="" alt=""></a>
+                    <img src="/img/play.png" alt="Video" class="app-video">
+                    <button class="video-btn"><img src="/img/play-btn.png" alt=""></button>
                 </div>
             </div>
-            <img src="" alt="">
         </div>
     </div>
 
@@ -200,31 +205,28 @@
     </div>
 
     <div class="block-clients">
-        <div>
-            <h2><span>Testimonials</span>Our Happy Clients</h2>
-            <div>
-                <div>
-                    <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
-                    <div>
-                        <img src="" alt="">
-                        <p>Rolin B. Mirano</p>
-                        <p>CEO, UIHUB</p>
+        <div class="wrap">
+            <h2 class="clients-title"><span>Testimonials</span>Our Happy Clients</h2>
+            <div class="box-clients">
+                <div class="clients-card">
+                    <p class="clients-card-text">It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
+                    <div class="clients-info">
+                        <img src="img/clients_avatar.png" alt="Clients avatar">
+                        <p class="clients-post"><span>Rolin B. Mirano</span>CEO, UIHUB</p>
                     </div>
                 </div>
-                <div>
-                    <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
-                    <div>
-                        <img src="" alt="">
-                        <p>Rolin B. Mirano</p>
-                        <p>CEO, UIHUB</p>
+                <div class="clients-card">
+                    <p class="clients-card-text">It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
+                    <div class="clients-info">
+                        <img src="img/clients_avatar.png" alt="Clients avatar">
+                        <p class="clients-post"><span>Rolin B. Mirano</span>CEO, UIHUB</p>
                     </div>
                 </div>
-                <div>
-                    <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
-                    <div>
-                        <img src="" alt="">
-                        <p>Rolin B. Mirano</p>
-                        <p>CEO, UIHUB</p>
+                <div class="clients-card">
+                    <p class="clients-card-text">It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
+                    <div class="clients-info">
+                        <img src="img/clients_avatar.png" alt="Clients avatar">
+                        <p class="clients-post"><span>Rolin B. Mirano</span>CEO, UIHUB</p>
                     </div>
                 </div>
             </div>
