--- a/index.html
+++ b/index.html
@@ -127,18 +127,23 @@
     </div>
 
     <div class="block-software">
-        <div>
-            <img src="" alt="">
-            <div>
-                <img src="" alt="">
-                <h2>Grab Your  Software With Amazing  Features</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-                <dl>
-                    <dt>01. Clean Design</dt>
-                    <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</dd>
-                    <dt>02. Easy To Customize</dt>
-                    <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</dd>
-                </dl>
+        <div class="software-wrap">
+            <div class="software-box">
+                <div>
+                    <img src="/img/software_stat.png" alt="">
+                </div>
+                <div class="software-info">
+                    <img src="/img/icon_tools.png" alt="Icon tools" class="software-icon">
+                    <h2 class="software-title">Grab Your  Software With Amazing  Features</h2>
+                    <p class="software-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+                    <dl>
+                        <dt>01. Clean Design</dt>
+                        <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</dd>
+                        <hr>
+                        <dt>02. Easy To Customize</dt>
+                        <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</dd>
+                    </dl>
+                </div>
             </div>
         </div>
     </div>
@@ -178,23 +183,31 @@
     </div>
 
     <div class="block-analytics-primary">
-        <img src="" alt="">
-        <div>
-            <img src="" alt="">
-            <h2>Limpon Is Suitable For Anytype Landingpage</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-            <a href="">Get started now</a>
+        <div class="analytics-box">
+            <div>
+                <img src="/img/analytics-primary.png" alt="">
+            </div>
+            <div class="analytics-info">
+                <img src="/img/icon_tools.png" alt="">
+                <h2 class="analytics-title">Limpon Is Suitable For Anytype LandingPage</h2>
+                <p class="analytics-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+                <a href="" class="btn-blue">Get started now</a>
+            </div>
         </div>
     </div>
 
     <div class="block-analytics-secondary">
-        <div>
-            <img src="" alt="">
-            <h2>Limpon Is Suitable For Anytype Landingpage</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-            <a href="">Learn more</a>
+        <div class="analytics-box">
+            <div class="analytics-info">
+                <img src="/img/icon_tools.png" alt="">
+                <h2 class="analytics-title">Easy To Etid & Very Easily Control</h2>
+                <p class="analytics-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+                <a href="" class="btn-blue btn-blue-sec">Learn more</a>
+            </div>
+            <div>
+                <img src="/img/analytics-secondary.png" alt="">
+            </div>
         </div>
-        <img src="" alt="">
     </div>
 
     <div class="block-preview">
